cid/parser/output/rulesetParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g 2010-07-09 08:54:59

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;
public class rulesetParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "INT", "EXPONENT", "FLOAT", "COMMENT", "WS", "ESC_SEQ", "STRING", "CHAR", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "HTML", "JS", "REGEXP", "'ruleset'", "'{'", "'}'", "'rule'", "'is'", "';'", "'fired'", "'always'", "'notfired'", "'else'", "'if'", "'callbacks'", "'success'", "'failure'", "'click'", "'change'", "'='", "'triggers'", "'clear'", "':'", "'set'", "'forget'", "'in'", "'mark'", "'with'", "'+='", "'-='", "'from'", "'log'", "'last'", "'raise'", "'explicit'", "'event'", "'for'", "'active'", "'inactive'", "'test'", "'then'", "'('", "','", "')'", "'=>'", "'and'", "'choose'", "'every'", "'pre'", "'foreach'", "'select'", "'using'", "'when'", "'before'", "'or'", "'not'", "'between'", "'pageview'", "'submit'", "'dblclick'", "'update'", "'setting'", "'web'", "'on'", "'global'", "'datasource'", "'<-'", "'css'", "'function'", "'|'", "'||'", "'&&'", "'<='", "'>='", "'<'", "'>'", "'=='", "'!='", "'eq'", "'neq'", "'like'", "'+'", "'-'", "'*'", "'/'", "'%'", "'seen'", "'after'", "'true'", "'false'", "'['", "']'", "'current'", "'history'", "'.'", "'pick'", "'match'", "'length'", "'replace'", "'as'", "'head'", "'tail'", "'sort'", "'filter'", "'map'", "'uc'", "'lc'", "'split'", "'join'", "'query'", "'has'", "'union'", "'difference'", "'intersection'", "'unique'", "'once'", "'duplicates'", "'within'", "'ent'", "'app'", "'emit'", "'dataset'", "'JSON'", "'XML'", "'RSS'", "'HTML'", "'cachable'", "'years'", "'months'", "'weeks'", "'days'", "'hours'", "'minutes'", "'seconds'", "'year'", "'month'", "'week'", "'day'", "'hour'", "'minute'", "'second'", "'dispatch'", "'domain'", "'->'", "'meta'", "'name'", "'author'", "'key'", "'errorstack'", "'googleanalytics'", "'twitter'", "'amazon'", "'kpds'", "'google'", "'use'", "'module'", "'javascript'", "'resource'", "'authz'", "'require'", "'user'", "'logging'", "'off'", "'alias'", "'description'"
    };
    public static final int EXPONENT=6;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__159=159;
    public static final int T__27=27;
    public static final int T__158=158;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int OCTAL_ESC=15;
    public static final int CHAR=12;
    public static final int T__160=160;
    public static final int T__167=167;
    public static final int T__168=168;
    public static final int EOF=-1;
    public static final int T__165=165;
    public static final int T__166=166;
    public static final int T__163=163;
    public static final int T__164=164;
    public static final int T__161=161;
    public static final int T__162=162;
    public static final int T__93=93;
    public static final int T__19=19;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__148=148;
    public static final int T__147=147;
    public static final int T__90=90;
    public static final int T__149=149;
    public static final int REGEXP=18;
    public static final int COMMENT=8;
    public static final int T__154=154;
    public static final int T__155=155;
    public static final int T__156=156;
    public static final int T__157=157;
    public static final int T__99=99;
    public static final int T__150=150;
    public static final int T__98=98;
    public static final int T__151=151;
    public static final int T__97=97;
    public static final int T__152=152;
    public static final int T__96=96;
    public static final int T__153=153;
    public static final int T__95=95;
    public static final int T__139=139;
    public static final int T__138=138;
    public static final int T__137=137;
    public static final int T__136=136;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int INT=5;
    public static final int T__141=141;
    public static final int T__85=85;
    public static final int T__142=142;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__140=140;
    public static final int T__86=86;
    public static final int T__145=145;
    public static final int T__89=89;
    public static final int T__146=146;
    public static final int T__88=88;
    public static final int T__143=143;
    public static final int T__144=144;
    public static final int T__126=126;
    public static final int T__125=125;
    public static final int T__128=128;
    public static final int T__127=127;
    public static final int WS=9;
    public static final int T__71=71;
    public static final int T__129=129;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__130=130;
    public static final int T__74=74;
    public static final int T__131=131;
    public static final int T__73=73;
    public static final int T__132=132;
    public static final int T__133=133;
    public static final int T__79=79;
    public static final int T__134=134;
    public static final int T__78=78;
    public static final int T__135=135;
    public static final int T__77=77;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__118=118;
    public static final int T__119=119;
    public static final int T__116=116;
    public static final int T__117=117;
    public static final int T__114=114;
    public static final int T__115=115;
    public static final int T__124=124;
    public static final int T__123=123;
    public static final int T__122=122;
    public static final int T__121=121;
    public static final int FLOAT=7;
    public static final int T__120=120;
    public static final int HTML=16;
    public static final int ID=4;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int ESC_SEQ=10;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__59=59;
    public static final int T__103=103;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__111=111;
    public static final int T__110=110;
    public static final int T__113=113;
    public static final int T__112=112;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__180=180;
    public static final int UNICODE_ESC=14;
    public static final int JS=17;
    public static final int HEX_DIGIT=13;
    public static final int T__102=102;
    public static final int T__101=101;
    public static final int T__100=100;
    public static final int T__175=175;
    public static final int T__174=174;
    public static final int T__30=30;
    public static final int T__173=173;
    public static final int T__31=31;
    public static final int T__172=172;
    public static final int T__32=32;
    public static final int T__179=179;
    public static final int T__33=33;
    public static final int T__178=178;
    public static final int T__34=34;
    public static final int T__177=177;
    public static final int T__35=35;
    public static final int T__176=176;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__171=171;
    public static final int T__170=170;
    public static final int T__169=169;
    public static final int STRING=11;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "synpred7_ruleset", "using", "ruleset", "event_or", 
        "datatype", "synpred9_ruleset", "synpred13_ruleset", "hash_line", 
        "function_def", "unconditional_action", "synpred8_ruleset", "fundecls", 
        "synpred4_ruleset", "actionblock", "unary_expr", "period", "dispatch_block", 
        "counter_op", "persistent_expr", "failure", "add_expr", "synpred1_ruleset", 
        "raise_statement", "persistent_var", "event_and", "desc_block", 
        "counter_start", "setting", "emit_block", "action", "operator_expr", 
        "pragma", "alias", "rule_state", "namespace", "global", "add_op", 
        "predop", "synpred14_ruleset", "trail_forget", "trail_exp", "event_seq", 
        "persistent_set", "authz_pragma", "decl", "dataset", "global_decls", 
        "timeframe", "cachetime", "trail_mark", "dispatch", "pre_block", 
        "event_btwn", "foreach", "for_clause", "callbacks", "function_app", 
        "synpred3_ruleset", "post", "conjunction", "on_expr", "conditional_action", 
        "equality_expr", "datasource", "post_alternate", "var_domain", "synpred5_ruleset", 
        "mult_op", "operator_op", "event_prim", "synpred16_ruleset", "synpred12_ruleset", 
        "logging_pargma", "location", "rulesetname", "primrule", "click_link", 
        "key_value", "click", "event_filter", "expr", "event_domain", "rule_label", 
        "post_statement", "synpred15_ruleset", "dispatch_target", "control_statement", 
        "persistent_iterate", "name_value_pair", "periods", "synpred10_ruleset", 
        "synpred11_ruleset", "success", "cachable", "log_statement", "synpred2_ruleset", 
        "select", "conditional_expression", "trail_with", "factor", "rule", 
        "mult_expr", "operator", "synpred17_ruleset", "synpred6_ruleset", 
        "persistent_clear", "css_emit", "meta_block", "modifier", "when", 
        "blocktype", "modifier_clause", "post_block", "disjunction"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public rulesetParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public rulesetParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public rulesetParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return rulesetParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g"; }



    // $ANTLR start "ruleset"
    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:67:1: ruleset : 'ruleset' rulesetname '{' ( meta_block | dispatch_block | global_decls )* '}' EOF ;
    public final void ruleset() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "ruleset");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(67, 1);

        try {
            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:68:3: ( 'ruleset' rulesetname '{' ( meta_block | dispatch_block | global_decls )* '}' EOF )
            dbg.enterAlt(1);

            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:68:5: 'ruleset' rulesetname '{' ( meta_block | dispatch_block | global_decls )* '}' EOF
            {
            dbg.location(68,5);
            match(input,19,FOLLOW_19_in_ruleset646); if (state.failed) return ;
            dbg.location(68,15);
            pushFollow(FOLLOW_rulesetname_in_ruleset648);
            rulesetname();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(68,27);
            match(input,20,FOLLOW_20_in_ruleset650); if (state.failed) return ;
            dbg.location(69,4);
            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:69:4: ( meta_block | dispatch_block | global_decls )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=4;
                try { dbg.enterDecision(1);

                switch ( input.LA(1) ) {
                case 160:
                    {
                    alt1=1;
                    }
                    break;
                case 157:
                    {
                    alt1=2;
                    }
                    break;
                case 80:
                    {
                    alt1=3;
                    }
                    break;

                }

                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:69:6: meta_block
            	    {
            	    dbg.location(69,6);
            	    pushFollow(FOLLOW_meta_block_in_ruleset658);
            	    meta_block();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:70:6: dispatch_block
            	    {
            	    dbg.location(70,6);
            	    pushFollow(FOLLOW_dispatch_block_in_ruleset666);
            	    dispatch_block();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 3 :
            	    dbg.enterAlt(3);

            	    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:71:6: global_decls
            	    {
            	    dbg.location(71,6);
            	    pushFollow(FOLLOW_global_decls_in_ruleset673);
            	    global_decls();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(72,3);
            match(input,21,FOLLOW_21_in_ruleset680); if (state.failed) return ;
            dbg.location(72,7);
            match(input,EOF,FOLLOW_EOF_in_ruleset682); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(73, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "ruleset");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "ruleset"


    // $ANTLR start "rulesetname"
    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:75:1: rulesetname : ( ID | INT );
    public final void rulesetname() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "rulesetname");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(75, 1);

        try {
            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:76:2: ( ID | INT )
            dbg.enterAlt(1);

            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:
            {
            dbg.location(76,2);
            if ( (input.LA(1)>=ID && input.LA(1)<=INT) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(77, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "rulesetname");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "rulesetname"


    // $ANTLR start "rule"
    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:84:1: rule : 'rule' ID 'is' rule_state '{' select pre_block emit_block action ';' callbacks post_block '}' ;
    public final void rule() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "rule");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(84, 1);

        try {
            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:84:6: ( 'rule' ID 'is' rule_state '{' select pre_block emit_block action ';' callbacks post_block '}' )
            dbg.enterAlt(1);

            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:84:9: 'rule' ID 'is' rule_state '{' select pre_block emit_block action ';' callbacks post_block '}'
            {
            dbg.location(84,9);
            match(input,22,FOLLOW_22_in_rule729); if (state.failed) return ;
            dbg.location(84,16);
            match(input,ID,FOLLOW_ID_in_rule731); if (state.failed) return ;
            dbg.location(84,19);
            match(input,23,FOLLOW_23_in_rule733); if (state.failed) return ;
            dbg.location(84,24);
            pushFollow(FOLLOW_rule_state_in_rule735);
            rule_state();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(84,35);
            match(input,20,FOLLOW_20_in_rule737); if (state.failed) return ;
            dbg.location(85,3);
            pushFollow(FOLLOW_select_in_rule741);
            select();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(85,10);
            pushFollow(FOLLOW_pre_block_in_rule743);
            pre_block();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(85,20);
            pushFollow(FOLLOW_emit_block_in_rule745);
            emit_block();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(85,31);
            pushFollow(FOLLOW_action_in_rule747);
            action();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(85,38);
            match(input,24,FOLLOW_24_in_rule749); if (state.failed) return ;
            dbg.location(85,42);
            pushFollow(FOLLOW_callbacks_in_rule751);
            callbacks();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(85,52);
            pushFollow(FOLLOW_post_block_in_rule753);
            post_block();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(86,2);
            match(input,21,FOLLOW_21_in_rule756); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(87, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "rule");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "rule"


    // $ANTLR start "post_block"
    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:91:1: post_block : post '{' post_statement ';' ';' '}' post_alternate ;
    public final void post_block() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "post_block");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(91, 1);

        try {
            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:91:11: ( post '{' post_statement ';' ';' '}' post_alternate )
            dbg.enterAlt(1);

            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:91:13: post '{' post_statement ';' ';' '}' post_alternate
            {
            dbg.location(91,13);
            pushFollow(FOLLOW_post_in_post_block769);
            post();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(91,18);
            match(input,20,FOLLOW_20_in_post_block771); if (state.failed) return ;
            dbg.location(91,22);
            pushFollow(FOLLOW_post_statement_in_post_block773);
            post_statement();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(91,37);
            match(input,24,FOLLOW_24_in_post_block775); if (state.failed) return ;
            dbg.location(91,41);
            match(input,24,FOLLOW_24_in_post_block777); if (state.failed) return ;
            dbg.location(91,45);
            match(input,21,FOLLOW_21_in_post_block779); if (state.failed) return ;
            dbg.location(91,49);
            pushFollow(FOLLOW_post_alternate_in_post_block781);
            post_alternate();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(91, 63);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "post_block");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "post_block"


    // $ANTLR start "post"
    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:93:1: post : ( 'fired' | 'always' | 'notfired' );
    public final void post() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "post");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(93, 1);

        try {
            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:93:5: ( 'fired' | 'always' | 'notfired' )
            dbg.enterAlt(1);

            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:
            {
            dbg.location(93,5);
            if ( (input.LA(1)>=25 && input.LA(1)<=27) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(95, 17);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "post");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "post"


    // $ANTLR start "post_alternate"
    // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:98:1: post_alternate : 'else' '{' post_statement ';' ';' '}' ;
    public final void post_alternate() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "post_alternate");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(98, 1);

        try {
            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:98:15: ( 'else' '{' post_statement ';' ';' '}' )
            dbg.enterAlt(1);

            // /Users/ciddennis/Development/sandboxes/cid/parser/ruleset.g:98:17: 'else' '{' post_statement ';' ';' '}'
            {
            dbg.location(98,17);
            match(input,28,FOLLOW_28_in_post_alternate812); if (state.failed) return ;
            dbg.location(98,24);
            match(input,20,FOLLOW_20_in_post_alternate814); if (state.failed) return ;
            dbg.location(98,28);
            pushFollow(FOLLOW_post_statement_in_post_alternate816);
            post_statement();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(98,43);
            match(input,24,FOLLOW_24_in_post_alternate818); if (state.failed) return ;
            dbg.location(98,47);
            match(input,24,FOLLOW_24_in_post_alternate820); if (state.failed) return ;
            dbg.location(98,51);
            match(input,21,FOLLOW_21_in_post_alternate822); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(98, 54);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "post_alternate");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "post_alternate"

